sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:4: error: ';' expected but '=' found.
  car c1:Boolean = false
                 ^